--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "29.3.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
